--- a/Mvc/Views/Design/Contact.cshtml
+++ b/Mvc/Views/Design/Contact.cshtml
@@ -35,10 +35,7 @@
                     </li>
                 </ul>
             </div>
-                <form class="form-inline my-2 my-lg-0">
-                    <div class="serach_icon"><a href="#"><i class="fa fa-search" aria-hidden="true"></i></a></div>
-                </form>
-            
+               
         </nav>
     </div>
 </div>
@@ -61,7 +58,7 @@
                         <input type="text" class="mail_text" placeholder="Email" name="Email">
                         <input type="text" class="mail_text" placeholder="Phone Number" name="Phone Number">
                         <textarea class="massage-bt" placeholder="Massage" rows="5" id="comment" name="Massage"></textarea>
-                        <div class="send_bt"><a href="#">Send</a></div>
+                        <div class="send_bt"><a asp-action="Contact">Send</a></div>
                     </div>
                 </div>
             </div>
